Center aligned image fix, expose guestbook in menu, gatsby-node comment fixes

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -651,5 +651,9 @@ pre tt:after {
 }
 
 .align-center {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
   text-align: center;
 }
+
